...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leap Year Finder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mCW-0Y-Vdd">
                                <rect key="frame" x="123.5" y="50" width="128" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter an year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cFV-r3-EDd">
                                <rect key="frame" x="87.5" y="101" width="200" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="8DH-lz-kvo"/>
                                    <constraint firstAttribute="height" constant="40" id="Vf0-eY-0Lo"/>
                                </constraints>
                                <nil key="textColor"/>
...
                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wVD-Ad-uxF">
                                <rect key="frame" x="137.5" y="168" width="100" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="UUh-sx-4nU"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="YN6-EB-xdb"/>
                                </constraints>
                                <state key="normal" title="Submit"/>
                                <connections>
                                    <action selector="submitButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="V1V-Ta-pg3"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.98336292235701273" green="0.97211786556523649" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
