...
        self.submitButton.isEnabled = false
    }
    
    // Private Methods
    private func showAlert(message:String) {
        let alert = UIAlertController(title: "", message: message, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: { action in
            self.clearTextField()
        }))
        self.present(alert, animated: true, completion: nil)
    }
    
    private func clearTextField() {
...
